# Operations

./: README.md
Operations/: CMakeLists.txt  main.cpp  test.txt
Operations/src/: CollectionOperations.cpp  CollectionOperations.h  Reader.cpp  Reader.h
Operations/src/Operators/: CheckerDataOperator.cpp  CheckerDataOperator.h  CulculationDTO.cpp  CulculationDTO.h  DataResult.cpp  DataResult.h  Difference.cpp  Difference.h  Division.cpp  Division.h  Multiplication.cpp  Multiplication.h  OperatorInterface.cpp  OperatorInterface.h  Quadratic.cpp  Quadratic.h  Summ.cpp  Summ.h  TreatmentDataBinaryOperator.cpp  TreatmentDataBinaryOperator.h
